[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/scenes/BattleScene.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Pixellari.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/background/bg_crypt_001.png" type="Texture" id=3]
[ext_resource path="res://assets/themes/ui_theme.tres" type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 680, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 288 )

[sub_resource type="DynamicFont" id=3]
size = 52
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 48
outline_size = 2
outline_color = Color( 0.160784, 0.137255, 0.137255, 1 )
font_data = ExtResource( 2 )

[node name="BattleScene" type="Node2D"]
script = ExtResource( 1 )

[node name="DamageLabelBoundries" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageLabelBoundries"]
position = Vector2( 600, -10 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DamageLabelBoundries"]
position = Vector2( 616, 472 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="DamageLabelBoundries"]
position = Vector2( -28, 232 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="DamageLabelBoundries"]
position = Vector2( 1227, 224 )
shape = SubResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 600, 232 )
scale = Vector2( 0.62, 0.62 )
z_index = -1
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Players" type="Node" parent="."]

[node name="PlayerCombatantPositions" type="Node2D" parent="."]

[node name="Pos1" type="Position2D" parent="PlayerCombatantPositions"]
position = Vector2( 394, 242 )

[node name="Pos2" type="Position2D" parent="PlayerCombatantPositions"]
position = Vector2( 330, 314 )

[node name="Pos3" type="Position2D" parent="PlayerCombatantPositions"]
position = Vector2( 266, 386 )

[node name="Combatants" type="CanvasLayer" parent="."]

[node name="Ysort" type="YSort" parent="Combatants"]
z_index = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="Effects" type="Node2D" parent="UI"]

[node name="Actions" type="VBoxContainer" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 304.0
margin_top = -256.0
margin_right = 464.0
margin_bottom = -112.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Targets" type="Node2D" parent="UI"]

[node name="Text" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="EnemyAction" type="Label" parent="UI/Text"]
margin_top = -100.0
margin_right = 1264.0
margin_bottom = -41.0
custom_fonts/font = SubResource( 3 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="UI/Text/EnemyAction"]

[node name="TargetInfo" type="Panel" parent="UI"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -200.0
margin_right = -288.0
margin_bottom = -8.0
theme = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="Label" parent="UI/TargetInfo"]
margin_left = 8.0
margin_top = 8.0
margin_right = 352.0
margin_bottom = 40.0
text = "//"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="UI/TargetInfo"]
margin_left = 8.0
margin_top = 40.0
margin_right = 57.0
margin_bottom = 72.0
text = "HP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPValue" type="Label" parent="UI/TargetInfo"]
margin_left = 64.0
margin_top = 40.0
margin_right = 144.0
margin_bottom = 72.0
text = "//"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProtLabel" type="Label" parent="UI/TargetInfo"]
margin_left = 8.0
margin_top = 104.0
margin_right = 57.0
margin_bottom = 136.0
text = "Prot:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProtValue" type="Label" parent="UI/TargetInfo"]
margin_left = 72.0
margin_top = 104.0
margin_right = 144.0
margin_bottom = 136.0
text = "//"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AtkLabel" type="Label" parent="UI/TargetInfo"]
margin_left = 8.0
margin_top = 72.0
margin_right = 50.0
margin_bottom = 104.0
text = "Atk:"

[node name="AtkValue" type="Label" parent="UI/TargetInfo"]
margin_left = 56.0
margin_top = 76.0
margin_right = 144.0
margin_bottom = 108.0
text = "//"
align = 1

[node name="SpeedLabel" type="Label" parent="UI/TargetInfo"]
margin_left = 8.0
margin_top = 136.0
margin_right = 75.0
margin_bottom = 168.0
text = "Speed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedValue" type="Label" parent="UI/TargetInfo"]
margin_left = 88.0
margin_top = 136.0
margin_right = 144.0
margin_bottom = 168.0
text = "//"
align = 1

[node name="PlayerHealthBars" type="VBoxContainer" parent="UI"]
margin_left = 16.0
margin_top = 456.0
margin_right = 304.0
margin_bottom = 552.0
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="EnemyHealthBars" type="VBoxContainer" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -312.0
margin_top = 464.0
margin_right = -24.0
margin_bottom = 512.0
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TurnCounter" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -600.0
margin_top = -118.0
margin_right = 600.0
margin_bottom = -64.0
custom_fonts/font = SubResource( 6 )
text = "Turn: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
